// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmployerList /> renders empty list of employers 1`] = `
<div
  className="EmployerList__Container--NoResults"
>
  ñôRèƨúℓƭƨ
</div>
`;

exports[`<EmployerList /> renders list of employers 1`] = `
<div
  className="EmployerList__Container"
>
  <div
    className="EmployerList__Item"
  >
    [component: EmployerListItem employerId=(e2) showDetails=(true) /]
  </div>
  <div
    className="EmployerList__Item"
  >
    [component: EmployerListItem employerId=(e3) showDetails=(true) /]
  </div>
</div>
`;

exports[`<EmployerList /> renders without exploding 1`] = `
<div
  className="EmployerList__Container--Loading"
>
  ℓôáδïñϱ
</div>
`;
